# tree-sitter-denizenscript

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-denizenscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_denizenscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDenizenscript/: denizenscript.h
bindings/swift/TreeSitterDenizenscriptTests/: TreeSitterDenizenscriptTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: test.txt
