[package]
name = "tree-sitter-denizenscript"
description = "A tree-sitter repository that implements Denizen Script (dsc) support."
version = "0.1.0"
authors = ["Skullfurious"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "denizenscript"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "http://github.com/skullfurious/tree-sitter-denizenscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
